edgecloud 2997-  [Monitoring] Fix monitoring page layout when you expand/collapse mobiledgex left panel (#468)
edgecloud 2997- [Monitoring] Fix monitoring page layout when you expand/collapse mobiledgex left panel

--- a/src/css/pages/monitoring.css
+++ b/src/css/pages/monitoring.css
@@ -39,6 +39,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100%;
 }
 
 .page_monitoring_datepicker_box {
